viproc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viproc
  annotations:
    cloud.google.com/backend-config: '{"default": "viproc"}'
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: viproc
  type: NodePort
