viproc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viproc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sgeap-viproc-prod"
    networking.gke.io/v1beta1.FrontendConfig: "viproc"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: viproc
      port:
        number: 8080
